fixed the general layout bugs on mobile devices

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -59,3 +59,7 @@
 * {
   font-family: "Ubuntu";
 }
+
+html {
+  overflow: hidden !important;
+}
