--- a/client/src/screens/NoteDetails/components/lexical/index.css
+++ b/client/src/screens/NoteDetails/components/lexical/index.css
@@ -22,7 +22,7 @@ header img {
 
 header h1 {
   text-align: left;
-  color: #333;
+  color: #e4e4e4;
   display: inline-block;
   margin: 20px 0 0 0;
 }
